fix: card-description mobile

--- a/src/blocks/card-content/card-content.css
+++ b/src/blocks/card-content/card-content.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 232px 1fr;
   column-gap: 30px;
-  row-gap: 10px;
+  row-gap: 20px;
   align-items: flex-start;
 }
 
