--- a/src/blocks/comments/comments.css
+++ b/src/blocks/comments/comments.css
@@ -52,3 +52,22 @@
   margin: 10px 0 20px;
   text-align: justify;
 }
+
+@media all and (max-width: 500px) {
+  .comments__text {
+    font-size: 14px;
+  }
+
+  .comments__button {
+    font-size: 14px;
+    width: 200px;
+  }
+
+  .comments__name {
+    font-size: 14px;
+  }
+
+  .comments__data {
+    font-size: 12px;
+  }
+}
